--- a/.gitignore
+++ b/.gitignore
@@ -18,9 +18,14 @@ local_settings.py
 # OS / IDE
 .DS_Store
 Thumbs.db
+
+# NGrok configuration avec tokens (SENSIBLE - ne pas commiter)
+ngrok_front.yml
+ngrok_back.yml
 .vscode/
 .idea/
 
 # Frontend
 node_modules/
-.env
+.env__pycache__/
+*.pyc
